--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "unittests_in_js",
+  "name": "0x13-unittests_in_js",
   "version": "1.0.0",
-  "description": "![unittests](https://i.imgur.com/5T79Gca.png)",
-  "main": "index.js",
+  "description": "",
+  "main": "0-calcul.js",
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "mocha": "^8.2.1",
+    "sinon": "^9.2.3"
+  }
 }
