--- a/unittests_in_js/package.json
+++ b/unittests_in_js/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "0x13-unittests_in_js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "0-calcul.js",
-  "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
-    "lint": "eslint ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chai": "^4.2.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
-    "mocha": "^8.2.1",
-    "sinon": "^9.2.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "eslint": "^9.23.0",
-    "globals": "^16.0.0"
-  }
+    "name": "unittests_in_js",
+    "version": "1.0.0",
+    "description": "",
+    "main": "0-calcul.js",
+    "scripts": {
+        "test": "./node_modules/mocha/bin/mocha",
+        "lint": "eslint ."
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "chai": "^4.2.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jest": "^22.17.0",
+        "mocha": "^8.2.1",
+        "sinon": "^9.2.3"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.23.0",
+        "eslint": "^9.23.0",
+        "globals": "^16.0.0"
+    }
 }
